--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
 <main>
 
-  <section class="py-5 text-center container">
+  <section class="py-5 text-center parallax">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">快速上手的數位人文工具</h1>
-        <p class="lead text-muted">這邊提供各種由東吳大學GIS中心所開發及維護的微型服務，讓大家能更好地呈現自己的資料</p>
-        <p>
-          <a href="#" id="servicesRender" class="btn btn-primary my-2">我們託管的服務</a>
-          <a href="#" id="reposRender" class="btn btn-secondary my-2">我們維護的程式庫</a>
+        <h1 class="fw-light font-border">快速上手的數位人文工具</h1>
+        <p class="lead text-muted font-border">這邊提供各種由東吳大學GIS中心所開發及維護的微型服務，讓大家能更好地呈現自己的資料</p>
+        <p class="switch-group">
+          <a href="#" id="servicesRender" class="btn btn-primary my-2 btn-border">我們託管的服務</a>
+          <a href="#" id="reposRender" class="btn btn-secondary my-2 btn-border">我們維護的程式庫</a>
         </p>
       </div>
     </div>
@@ -142,6 +142,9 @@
     <script src="https://kit.fontawesome.com/f65bf04383.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="assets/js/jquery.parallax.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
+
     <script src="assets/js/index.js"></script>
 
 
