--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="container">
       <div class="col base">
         <div class="card shadow-sm">
-          <a class="base-path" href="#">
+          <a class="base-image-link" href="#">
             <img class="base-image bd-placeholder-img card-img-top" src="#">
           </a>
 
@@ -113,7 +113,7 @@
             <p class="base-description card-text">description</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
-                <a class="base-path" href="#">
+                <a class="base-button base-button-link" href="#">
                   <button type="button" class="btn btn-sm btn-outline-secondary">開啟服務</button>
                 </a>
               </div>
