--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-0">copyright <a href="https://www-ch.scu.edu.tw/">SCU</a>.</p>
+    <p class="mb-0">copyright <a href="https://gis.scu.edu.tw">GIS SCU</a>.</p>
   </div>
 </footer>
 
@@ -142,7 +142,6 @@
     <script src="https://kit.fontawesome.com/f65bf04383.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="assets/js/jquery.parallax.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 
     <script src="assets/js/index.js"></script>
